# intake-tool

./: .gitignore  README.md
backend/: .env.prod.proxy-companion  .env.staging.proxy-companion  Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  env.dev  pyproject.toml
backend/accounts/: tests.py
backend/accounts/migrations/: 0001_initial.py
backend/api/: serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/intake/: admin.py  apis.py  models.py  serializers.py  urls.py
backend/intake/migrations/: 0001_initial.py  0002_auto_20211114_1719.py  0003_auto_20211114_1835.py  0004_area.py
backend/intakemanager/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/intakemanager/migrations/: 0001_initial.py  0002_auto_20211128_1653.py  0003_auto_20211128_1700.py
backend/nginx/: nginx.conf
backend/pages/: tests.py  urls.py  views.py
backend/static/css/: base.css  custom.css
backend/static/js/: ajax.js  app.js  base.js  phonetool.js  phonetool01.js
backend/static/json/: phonescript.json
backend/templates/: _base.html  home.html
backend/templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html
backend/templates/intakemanager/: intakeuser_form.html  userhome.html
backend/templates/intaketool/: intaketool.html
backend/templates/registration/: login.html  signup.html
backend/tracker/: admin.py  forms.py  models.py  trichomes-tracker-dev.code-workspace  urls.py  views.py
(+144 files in other folders)
